--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@ linear-gradient(90deg,var(--joy),var(--anx),var(--ener),var(--calm),var(--sad));
         <h2 data-en="Support" data-zh="支持"></h2>
         <p class="text2" data-en="Have questions or feedback? Email us anytime."
            data-zh="如有问题或建议，欢迎邮件联系。"></p>
-        <p><a href="mailto:support@example.com">support@example.com</a></p>
+        <p>
+<a href="https://github.com/chenkaitech/MoodFlow" target="_blank" rel="noopener" 
+data-en="GitHub Repository" data-zh="GitHub 仓库"></a><br>
+<a href="https://github.com/chenkaitech/MoodFlow/issues" target="_blank" rel="noopener" 
+data-en="Report an issue on GitHub" data-zh="在 GitHub 提交问题"></a><br>
+<a href="mailto:support@example.com">support@example.com</a></p>
       </div>
     </div>
   </section>
