--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ linear-gradient(90deg,var(--joy),var(--anx),var(--ener),var(--calm),var(--sad));
 <div class="container">
   <nav>
     <div class="brand">
-      <img class="icon" src="icon.png" alt="MoodFlow icon">
+      <img class="icon" src="app_icon.png" alt="MoodFlow icon">
       <span>MoodFlow · 情绪光谱</span>
     </div>
     <div class="lang-switch">
