--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ linear-gradient(90deg,var(--joy),var(--anx),var(--ener),var(--calm),var(--sad));
       </div>
       <div style="margin-top:24px" class="badge">
         <span>•</span>
-        <span data-en="Private by design · iCloud sync optional" data-zh="隐私优先 · 可选 iCloud 同步"></span>
+        <span data-en="Private by design" data-zh="隐私优先"></span>
       </div>
       <div style="margin-top:16px" class="colorbar" aria-hidden="true"></div>
     </div>
