--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ linear-gradient(90deg,var(--joy),var(--anx),var(--ener),var(--calm),var(--sad));
     <div class="grid-2">
       <div class="card">
         <h2 data-en="Privacy" data-zh="隐私"></h2>
-        <p class="text2" data-en="Your data stays on your device. iCloud sync is optional and end‑to‑end encrypted. No account required."
-           data-zh="数据默认仅存储在本机。iCloud 同步为可选，并采用端到端加密。无须注册账号。"></p>
+        <p class="text2" data-en="Your data stays on your device."
+           data-zh="数据默认仅存储在本机。"></p>
       </div>
       <div class="card">
         <h2 data-en="Support" data-zh="支持"></h2>
