--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ linear-gradient(90deg,var(--joy),var(--anx),var(--ener),var(--calm),var(--sad));
 data-en="GitHub Repository" data-zh="GitHub 仓库"></a><br>
 <a href="https://github.com/chenkaitech/MoodFlow/issues" target="_blank" rel="noopener" 
 data-en="Report an issue on GitHub" data-zh="在 GitHub 提交问题"></a><br>
-<a href="mailto:support@example.com">support@example.com</a></p>
+<a href="mailto:support@example.com">freesysck@outlook.com</a></p>
       </div>
     </div>
   </section>
@@ -152,8 +152,8 @@ data-en="Report an issue on GitHub" data-zh="在 GitHub 提交问题"></a><br>
     <div class="grid-2">
       <div>
         <strong>MoodFlow · 情绪光谱</strong><br>
-        <span data-en="© 2025 Your Studio. All rights reserved."
-              data-zh="© 2025 你的工作室。保留所有权利。"></span>
+        <span data-en="© 2025 CXY Studio. All rights reserved."
+              data-zh="© 2025 CXY Studio。保留所有权利。"></span>
       </div>
       <div style="text-align:right">
         <a href="#privacy" data-en="Privacy Policy" data-zh="隐私政策"></a> ·
