--- a/index.html
+++ b/index.html
@@ -3,85 +3,173 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>HueView · Intel</title>
-<meta name="description" content="HueView · Bilingual screenshots page.">
+<title>HueView · 情绪光谱</title>
+<meta name="description" content="HueView · Visualize your emotional journey. 情绪光谱 · 让情绪流动可视。">
 <link rel="icon" href="favicon.ico">
 <style>
 :root{
   --bg:#16171E; --surface:#1E1F27; --text:#E8EAF4; --text2:#B4B8C9; --blue:#7DA6FF;
+  --joy:#FFD54F; --calm:#4DA8FF; --anx:#FF7043; --sad:#7E57C2; --ener:#2ECC71;
 }
-*{box-sizing:border-box}
-html,body{margin:0;background:var(--bg);color:var(--text);
-  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Helvetica, Arial, Noto Sans, "PingFang SC", "Hiragino Sans GB", "Microsoft Yahei", sans-serif;}
+*{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);
+font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Helvetica, Arial, Noto Sans, "PingFang SC", "Hiragino Sans GB", "Microsoft Yahei", sans-serif;}
 a{color:var(--blue);text-decoration:none}
-.container{max-width:1120px;margin:0 auto;padding:32px 20px}
-header{display:flex;justify-content:space-between;align-items:center;gap:16px}
-.brand{display:flex;gap:12px;align-items:center;font-weight:700}
+.container{max-width:1100px;margin:0 auto;padding:40px 24px}
+nav{display:flex;justify-content:space-between;align-items:center;gap:16px}
+.brand{display:flex;align-items:center;gap:12px;font-weight:700}
+.brand img.icon{width:40px;height:40px;border-radius:12px}
 .lang-switch{display:flex;gap:8px;background:var(--surface);border-radius:12px;padding:6px}
 .lang-switch button{all:unset;cursor:pointer;padding:6px 14px;border-radius:10px;color:var(--text2);font-weight:600}
 .lang-switch button.active{background:var(--blue);color:#0B1220}
-h1{margin:28px 0 16px;font-size:36px;line-height:1.1}
-p.lead{color:var(--text2);font-size:18px}
-.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:18px;margin-top:28px}
+.hero{display:grid;grid-template-columns:1.1fr 0.9fr;gap:36px;align-items:center;margin-top:40px}
+.hero h1{font-size:40px;line-height:1.1;margin:0 0 16px}
+.hero p.lead{color:var(--text2);font-size:18px;margin:0 0 24px}
+.cta{display:flex;gap:12px;flex-wrap:wrap}
+.button{display:inline-flex;align-items:center;gap:10px;background:var(--blue);color:#0B1220;font-weight:700;
+  padding:14px 22px;border-radius:14px;box-shadow:0 10px 30px rgba(125,166,255,.25);}
+.button.ghost{background:transparent;color:var(--text);border:1px solid rgba(255,255,255,.15)}
+.card{background:var(--surface);border-radius:20px;padding:24px;box-shadow:0 10px 30px rgba(0,0,0,.25);}
+.section{margin-top:80px}
+.grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:24px}
+.grid-3{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:24px}
+.tag{display:inline-block;padding:6px 10px;border-radius:8px;font-size:13px}
+.sample{width:100%;border-radius:18px;box-shadow:0 12px 40px rgba(0,0,0,.35);background:#0f1118;aspect-ratio:9/19.5;object-fit:cover}
+.footer{margin-top:80px;color:var(--text2);font-size:14px;border-top:1px solid rgba(255,255,255,.08);padding:32px 0}
+.colorbar{height:10px;border-radius:999px;background:linear-gradient(90deg,var(--joy),var(--anx),var(--ener),var(--calm),var(--sad));}
+.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px}
 .gallery img{width:100%;border-radius:18px;box-shadow:0 12px 40px rgba(0,0,0,.35);background:#0f1118;aspect-ratio:9/19.5;object-fit:cover}
-.hidden{display:none !important}
-footer{margin-top:60px;color:var(--text2);font-size:14px;border-top:1px solid rgba(255,255,255,.08);padding:24px 0}
+@media (max-width:960px){ .hero{grid-template-columns:1fr} }
+
+.nav-links{display:flex;gap:18px;align-items:center}
+.nav-links a{color:var(--text2);font-weight:600}
+.nav-links a:hover{color:var(--text)}
 </style>
 </head>
 <body>
 <div class="container">
-  <header>
+  <nav>
     <div class="brand">
-      <img src="icon.png" alt="HueView" style="width:40px;height:40px;border-radius:12px">
-      <span>HueView</span>
+      <img class="icon" src="app_icon.png" alt="HueView icon">
+      <span>HueView · 情绪光谱</span>
     </div>
-    <div class="lang-switch">
+    <div class="nav-links"><a href="#privacy" data-en="Privacy" data-zh="隐私"></a><a href="#support" data-en="Support" data-zh="支持"></a></div><div class="lang-switch">
       <button id="btn-en" class="active">English</button>
       <button id="btn-zh">中文</button>
     </div>
-  </header>
+  </nav>
 
-  <main>
-    <h1 data-en="Product Screenshots" data-zh="产品截图"></h1>
-    <p class="lead" data-en="Below are language-specific screenshots. Switch the language to preview localized UI."
-       data-zh="以下为不同语言的截图。切换语言以预览本地化界面。"></p>
+  <section class="hero">
+    <div>
+      <h1 data-en="Visualize your emotional journey" data-zh="把情绪流动看得见"></h1>
+      <p class="lead" data-en="Track mood type, intensity, and time in one elegant spectrum. See patterns, get insights, and build healthier habits."
+         data-zh="在一个精致的光谱中同时记录情绪类型、强度与时间。发现模式，生成洞察，养成更健康的习惯。"></p>
+      <div class="cta">
+        <a href="#" class="button" data-en="Coming soon" data-zh="即将上架"></a>
+        <a href="#features" class="button ghost" data-en="Learn more" data-zh="了解功能"></a>
+      </div>
+      <div style="margin-top:24px;color:var(--text2)">
+        <span>• </span><span data-en="Private by design · iCloud sync optional" data-zh="隐私优先 · 可选 iCloud 同步"></span>
+      </div>
+      <div style="margin-top:16px" class="colorbar" aria-hidden="true"></div>
+    </div>
+    <div class="card">
+      <img class="sample" src="screenshot1.png" data-en-src="screenshot1.png" data-zh-src="screenshot1_zh.png" alt="App screenshot 1">
+    </div>
+  </section>
 
-    <!-- English screenshots -->
-    <section id="gallery-en" class="gallery">
-      <img src="en_1.png" alt="English screenshot 1">
-      <img src="en_2.png" alt="English screenshot 2">
-      <img src="en_3.png" alt="English screenshot 3">
-      <img src="en_4.png" alt="English screenshot 4">
-    </section>
+  <section id="features" class="section">
+    <h2 data-en="Core features" data-zh="核心功能"></h2>
+    <div class="grid-3" style="margin-top:24px">
+      <div class="card">
+        <div class="tag" style="background:rgba(77,168,255,.18);color:var(--calm)">Spectrum</div>
+        <h3 style="margin:12px 0" data-en="3D emotion spectrum" data-zh="三维情绪光谱"></h3>
+        <p class="text2" data-en="Type × Intensity × Time. Colors mix smoothly; intensity drives saturation and glow."
+           data-zh="类型 × 强度 × 时间。颜色顺滑混合，强度驱动饱和与光晕。"></p>
+      </div>
+      <div class="card">
+        <div class="tag" style="background:rgba(255,213,79,.18);color:var(--joy)">Daily · Weekly · Yearly</div>
+        <h3 style="margin:12px 0" data-en="From day ring to annual river" data-zh="从日环到年度情绪河流"></h3>
+        <p class="text2" data-en="Day view for precision; monthly heatmap and annual river reveal long‑term trends."
+           data-zh="日视图精确记录，月度热力与年度情绪河流揭示长期趋势。"></p>
+      </div>
+      <div class="card">
+        <div class="tag" style="background:rgba(46,204,113,.18);color:var(--ener)">Insights</div>
+        <h3 style="margin:12px 0" data-en="Actionable insights" data-zh="可行动洞察"></h3>
+        <p class="text2" data-en="Auto summaries like “Anxiety ↑37% on Thursday afternoons”, with filters and comparisons."
+           data-zh="自动摘要如「周四下午焦虑 ↑37%」，支持筛选与时间对比。"></p>
+      </div>
+    </div>
+  </section>
 
-    <!-- Chinese screenshots -->
-    <section id="gallery-zh" class="gallery hidden">
-      <img src="zh_1.png" alt="中文界面截图 1">
-      <img src="zh_2.png" alt="中文界面截图 2">
-      <img src="zh_3.png" alt="中文界面截图 3">
-      <img src="zh_4.png" alt="中文界面截图 4">
-    </section>
-  </main>
+  <section class="section">
+    <h2 data-en="Screenshots" data-zh="界面预览"></h2>
+    <p class="lead" data-en="Replace the four images below with your actual screenshots."
+       data-zh="将下方四张占位图替换为你的真实截图。"></p>
+    <div class="gallery" style="margin-top:16px">
+      <img src="en_1.png" data-en-src="en_1.png" data-zh-src="zh_1.png" alt="screenshot 1">
+      <img src="en_2.png" data-en-src="en_2.png" data-zh-src="zh_2.png" alt="screenshot 2">
+      <img src="en_3.png" data-en-src="en_3.png" data-zh-src="zh_3.png" alt="screenshot 3">
+      <img src="en_4.png" data-en-src="en_4.png" data-zh-src="zh_4.png" alt="screenshot 4">
+    </div>
+  </section>
 
-  <footer>
-    <div style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <span data-en="© 2025 Your Studio. All rights reserved." data-zh="© 2025 你的工作室。保留所有权利。"></span>
-      <a href="index.html" data-en="Back to Home" data-zh="返回首页"></a>
+  <section class="section">
+    <div class="grid-2">
+      <div class="card">
+        <h2 id="privacy" data-en="Privacy" data-zh="隐私"></h2>
+        <p class="text2" data-en="Your data stays on your device. iCloud sync is optional and end‑to‑end encrypted. No account required."
+           data-zh="数据默认仅存储在本机。iCloud 同步为可选，并采用端到端加密。无须注册账号。"></p>
+        <ul style="margin:12px 0 0 18px; color: var(--text2); line-height:1.7">
+          <li data-en="We do not request access to your contacts, location, photos, or microphone."
+              data-zh="我们不会请求访问您的联系人、位置信息、照片或麦克风。"></li>
+          <li data-en="We do not track your device identifiers or behavior data."
+              data-zh="我们不会追踪您的设备标识或行为数据。"></li>
+        </ul>
+      </div>
+      <div class="card">
+        <h2 id="support" data-en="Support" data-zh="支持"></h2>
+        <p class="text2" data-en="Have questions or feedback? Email us or open an issue on GitHub."
+           data-zh="有问题或建议？欢迎发送邮件，或在 GitHub 提交 Issue。"></p>
+        <p><a href="mailto:support@example.com">support@example.com</a></p>
+        <p>
+          <a href="https://github.com/chenkaitech/HueView" target="_blank" rel="noopener"
+             data-en="GitHub Repository" data-zh="GitHub 仓库"></a><br>
+          <a href="https://github.com/chenkaitech/HueView/issues" target="_blank" rel="noopener"
+             data-en="Report an issue on GitHub" data-zh="在 GitHub 提交问题"></a>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="grid-2">
+      <div>
+        <strong>HueView · 情绪光谱</strong><br>
+        <span data-en="© 2025 Your Studio. All rights reserved."
+              data-zh="© 2025 你的工作室。保留所有权利。"></span>
+      </div>
+      <div style="text-align:right">
+        <a href="#privacy" data-en="Privacy Policy" data-zh="隐私政策"></a> ·
+        <a href="#terms" data-en="Terms" data-zh="使用条款"></a>
+      </div>
     </div>
   </footer>
 </div>
 
 <script>
-function setLang(lang){
-  // text switch
-  document.querySelectorAll("[data-en]").forEach(el=>{
-    const text = el.getAttribute(lang==="zh"?"data-zh":"data-en");
-    if(text!==null){ el.textContent = text; }
+
+function swapLangImages(lang){
+  document.querySelectorAll("img[data-en-src]").forEach(img=>{
+    const src = img.getAttribute(lang==="zh" ? "data-zh-src" : "data-en-src");
+    if(src) img.setAttribute("src", src);
   });
-  // gallery switch
-  document.getElementById("gallery-en").classList.toggle("hidden", lang==="zh");
-  document.getElementById("gallery-zh").classList.toggle("hidden", lang!=="zh");
-  // buttons
+}
+function setLang(lang){
+  document.querySelectorAll("[data-en]").forEach(el=>{
+    const text = el.getAttribute(lang === "zh" ? "data-zh" : "data-en");
+    if(text!==null){ el.textContent = text; }
+    swapLangImages(lang);
+  });
   document.getElementById("btn-en").classList.toggle("active", lang==="en");
   document.getElementById("btn-zh").classList.toggle("active", lang==="zh");
   localStorage.setItem("hueview-lang", lang);
