--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ nav{display:flex;justify-content:space-between;align-items:center;gap:16px}
         <h2 id="support" data-en="Support" data-zh="支持"></h2>
         <p class="text2" data-en="Have questions or feedback? Email us or open an issue on GitHub."
            data-zh="有问题或建议？欢迎发送邮件，或在 GitHub 提交 Issue。"></p>
-        <p><a href="mailto:support@example.com">support@example.com</a></p>
+        <p><a href="mailto:support@example.com">freesysck@outlook.com</a></p>
         <p>
           <a href="https://github.com/chenkaitech/HueView" target="_blank" rel="noopener"
              data-en="GitHub Repository" data-zh="GitHub 仓库"></a><br>
@@ -142,8 +142,8 @@ nav{display:flex;justify-content:space-between;align-items:center;gap:16px}
     <div class="grid-2">
       <div>
         <strong>HueView · 情绪光谱</strong><br>
-        <span data-en="© 2025 Your Studio. All rights reserved."
-              data-zh="© 2025 你的工作室。保留所有权利。"></span>
+        <span data-en="© 2025 CXY Studio. All rights reserved."
+              data-zh="© 2025 CXY Studio。保留所有权利。"></span>
       </div>
     
     </div>
