--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ nav{display:flex;justify-content:space-between;align-items:center;gap:16px}
         <a href="#features" class="button ghost" data-en="Learn more" data-zh="了解功能"></a>
       </div>
       <div style="margin-top:24px;color:var(--text2)">
-        <span>• </span><span data-en="Private by design · iCloud sync optional" data-zh="隐私优先 · 可选 iCloud 同步"></span>
+        <span>• </span><span data-en="Private by design" data-zh="隐私优先"></span>
       </div>
       <div style="margin-top:16px" class="colorbar" aria-hidden="true"></div>
     </div>
@@ -114,8 +114,8 @@ nav{display:flex;justify-content:space-between;align-items:center;gap:16px}
     <div class="grid-2">
       <div class="card">
         <h2 id="privacy" data-en="Privacy" data-zh="隐私"></h2>
-        <p class="text2" data-en="Your data stays on your device. iCloud sync is optional and end‑to‑end encrypted. No account required."
-           data-zh="数据默认仅存储在本机。iCloud 同步为可选，并采用端到端加密。无须注册账号。"></p>
+        <p class="text2" data-en="Your data stays on your device. "
+           data-zh="数据默认仅存储在本机。"></p>
         <ul style="margin:12px 0 0 18px; color: var(--text2); line-height:1.7">
           <li data-en="We do not request access to your contacts, location, photos, or microphone."
               data-zh="我们不会请求访问您的联系人、位置信息、照片或麦克风。"></li>
