--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ nav{display:flex;justify-content:space-between;align-items:center;gap:16px}
       <p class="lead" data-en="Track mood type, intensity, and time in one elegant spectrum. See patterns, get insights, and build healthier habits."
          data-zh="在一个精致的光谱中同时记录情绪类型、强度与时间。发现模式，生成洞察，养成更健康的习惯。"></p>
       <div class="cta">
-        <a href="#" class="button" data-en="Coming soon" data-zh="即将上架"></a>
+        <a href="https://chenkaitech.github.io/HueFlow/" class="button" data-en="Launch" data-zh="现已上架"></a>
         <a href="#features" class="button ghost" data-en="Learn more" data-zh="了解功能"></a>
       </div>
       <div style="margin-top:24px;color:var(--text2)">
